05-gitops/applications/development/backend-go-cinema/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-go-cinema-np
  namespace: backend-development
spec:
  podSelector:
    matchLabels:
      app: backend-go-cinema
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend-go
    ports:
    - protocol: TCP
      port: 8080
